# Conformity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
app/: CMakeLists.txt  main.cpp
cmake/: FindSSE.cmake  InitDownloadSubmodule.cmake
diagrams/: #architecture.org#  #classDiagram.png#  antonio@localhost.localdomain.2281:1599051061  architecture.org
include/aditum/: #AditumAttributeDriven.hpp#  #DistanceBased.hpp#  .#AditumAttributeDriven.hpp  .#DistanceBased.hpp  AditumAlgo.hpp  AditumAttributeDriven.hpp  AditumBuilder.hpp  AditumGraph.hpp  AttributeWise.hpp  ClassBased.hpp  DistanceBased.hpp  Distribution.hpp  EntropyBased.hpp  FunctionTraits.hpp  RandomRRSetGenerator.hpp  Utility.hpp
include/aditum/io/: CapitalScoreFileReader.hpp  FileReader.hpp  UserAttributesFileReader.hpp
src/: #CapitalScoreFileReader.cpp#  AditumGraph.cpp  CMakeLists.txt  CapitalScoreFileReader.cpp  Distribution.cpp  UserAttributesFileReader.cpp  Utility.cpp
tests/: CMakeLists.txt  aditumTests.cpp  testlib.cpp
